<resources>
    <string name="app_name">VosTranca</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fechasDisponibles">Ver Fechas Disponibles</string>
    <string name="fechaSeleccionada">Fecha seleccionada:</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="servicioSeleccionado">Servicio Seleccionado:</string>
    <string name="confimar">Confirmar Reserva</string>
    <string name="cancelar">Cancelar</string>
    <string name="personas">Cantidad de Personas</string>
    <string name="direccion">Direccion</string>
    <string name="campoVacio">Este campo no puede estar vacío.</string>
    <string name="servicios">Servicios</string>
    <string name="eventos">Eventos</string>

    <string name="default_notification_channel_id" translatable="false">codingwithmitch.com.firebasedirectmessage.default_notification_channel_id</string>
    <string name="data_type">data_type</string>
    <string name="direct_message">direct_message</string>
    <string name="data_message">message</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
