<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ReservaFragment"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <Button
        android:id="@+id/botonFechas"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="?android:attr/selectableItemBackground"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/fechasDisponibles"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textoSeleccionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonFechas"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/fechaSeleccionada"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textoFechaSeleccionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textoSeleccionada"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/textoSeleccionada"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        tools:text="15/07/2019" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoFechaSeleccionada"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:hint="@string/nombre"
        >

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayoutNombre"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:hint="@string/telefono"
        >

        <EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutPersonas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayoutTelefono"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:hint="@string/personas"
        >

        <EditText
            android:id="@+id/editTextPersonas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayoutPersonas"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:hint="@string/direccion"
        >

        <EditText
            android:id="@+id/editTextDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicioSeleccionado"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/inputLayoutDireccion"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/botonConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:background="?android:attr/selectableItemBackground"
        android:textAllCaps="false"
        android:text="@string/confimar"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:background="#d50000"
        android:textAllCaps="false"
        android:text="@string/cancelar"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="50dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        />


</RelativeLayout>